fix test
Signed-off-by: pbelgundi <prajakta.belgundi@emc.com>